--- a/settings.ini
+++ b/settings.ini
@@ -2,3 +2,7 @@
 buttons_frame = #6200EE
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
+
+[styles]
+relief = flat, raised, sunken, groove, ridge
+relief_counter = 0
