Changed project structure more. Added the first option [shutdown].

--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,2 +1,2 @@
 [options]
-dropdown_options = Option 1, Option 2, Option 3
+dropdown_options = Shutdown, Sleep, Open, Copy, Delete, Create, Ping Website, System Information, Cancel Shutdown
