--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,9 +1,10 @@
 [colors]
 buttons_frame = #6200EE
-background = black
+background = gray
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
-relief_counter = 0
+relief_counter = 1
+
