--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,2 +1,2 @@
 [options]
-dropdown_options = Shutdown, Sleep, Open, Copy, Delete, Create, Ping Website, System Information, Cancel Shutdown
+dropdown_options = Shutdown, Sleep, Open, Copy File(s), Copy Folder, Delete, Create, Ping Website, System Information, Cancel Shutdown
