Working on automating adding new functions

--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,2 +1,2 @@
 [options]
-dropdown_options = Shutdown, Sleep, Open, Copy File(s), Copy Folder, Delete, Create, Ping Website, System Information, Cancel Shutdown
+dropdown_options = Cancel Shutdown, Copy File(s), Copy Folder, Create Folder, Delete File(s), Delete Folder(s), Open, Ping Website, Shutdown, Sleep, System Information
