--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,6 +1,6 @@
 [colors]
 buttons_frame = #6200EE
-background = gray
+background = black
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
 
