--- a/config/settings.ini
+++ b/config/settings.ini
@@ -3,6 +3,7 @@ buttons_frame = #6200EE
 background = black
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
+labels = white
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
