--- a/config/configuration.ini
+++ b/config/configuration.ini
@@ -1,2 +1,2 @@
 [options]
-dropdown_options = Cancel Shutdown, Copy Files, Copy Folder, Create Folder, Delete Files, Delete Folder, Open, Ping Website, Shutdown, Sleep, System Information
+dropdown_options = Cancel Shutdown, Copy Files, Copy Folder, Create Folder, Delete Files, Delete Folder, Open Files, Ping Website, Shutdown, Sleep, System Information
