Improved styling logic

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -4,6 +4,10 @@ background = black
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
 labels = white
+TButton_bg_active = white
+TButton_bg_inactive = black
+TButton_fg_active = black
+TButton_fg_inactive = white
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
