--- a/config/settings.ini
+++ b/config/settings.ini
@@ -4,10 +4,16 @@ background = black
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
 labels = white
+
 TButton_bg_active = white
 TButton_bg_inactive = black
 TButton_fg_active = black
 TButton_fg_inactive = white
+
+script_frame.TButton_bg_active = white
+script_frame.TButton_bg_inactive = black
+script_frame.TButton_fg_active = black
+script_frame.TButton_fg_inactive = white
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
