Introduction of more `ttk` and colors

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -1,19 +1,23 @@
 [colors]
-buttons_frame = #6200EE
 background = black
+buttons_frame = white
 script_frame = #3700B3
 selected_frame_highlight = #03DAC5
 labels = white
-
-TButton_bg_active = white
-TButton_bg_inactive = black
-TButton_fg_active = black
-TButton_fg_inactive = white
-
-script_frame.TButton_bg_active = white
-script_frame.TButton_bg_inactive = black
-script_frame.TButton_fg_active = black
-script_frame.TButton_fg_inactive = white
+radio_button = white
+combobox_selectbackground = white
+combobox_fieldbackground = black
+combobox_background = black
+combobox_lb_bg = white
+combobox_lb_fg = black
+tbutton_bg_active = white
+tbutton_bg_inactive = black
+tbutton_fg_active = black
+tbutton_fg_inactive = white
+script_frame.tbutton_bg_active = white
+script_frame.tbutton_bg_inactive = black
+script_frame.tbutton_fg_active = black
+script_frame.tbutton_fg_inactive = white
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
