Changed: Color of selected_Frame_highlight from cyan to blueish

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -2,7 +2,7 @@
 background = black
 buttons_frame = white
 script_frame = #3700B3
-selected_frame_highlight = #03DAC5
+selected_frame_highlight = #2f60d8
 labels = white
 radio_button = white
 combobox_selectbackground = white
