Changed colors of the question marks.

--- a/config/settings.ini
+++ b/config/settings.ini
@@ -18,6 +18,8 @@ script_frame.tbutton_bg_active = white
 script_frame.tbutton_bg_inactive = black
 script_frame.tbutton_fg_active = black
 script_frame.tbutton_fg_inactive = white
+question_mark_bg = #0F0E0E
+question_mark_fg = white
 
 [styles]
 relief = flat, raised, sunken, groove, ridge
